--- a/views/form.erb
+++ b/views/form.erb
@@ -14,5 +14,5 @@
     <input type="text" id="url" name="game[url]" value="<%= game.url %>">
   </div>
 
-  <input type="submit" value="Add Game">
+  <input type="submit" value="Submit Game">
 </form>
