--- a/views/form.erb
+++ b/views/form.erb
@@ -16,3 +16,8 @@
 
   <input type="submit" value="Submit Game">
 </form>
+
+<form action="/DestroyGame" method="post">
+  <input type="hidden" name="game_id" value="<%= game.id%>">
+  <input type="submit" value="Delete">
+</form>
