--- a/views/form.erb
+++ b/views/form.erb
@@ -1,23 +1,20 @@
-<form action="/games" method="post">
-  <div>
-    <label for="title">Title:</label>
-    <input type="text" id="title" name="game[title]" value="<%= game.title %>">
-  </div>
+<div class="medium-6 columns">
+  <form action="/games" method="post">
+    <div>
+      <label for="title">Title:</label>
+      <input type="text" id="title" name="game[title]" value="<%= game.title %>">
+    </div>
 
-  <div>
-    <label for="short_title">Short Title:</label>
-    <input type="text" id="short_title" name="game[short_title]" value="<%= game.short_title %>">
-  </div>
+    <div>
+      <label for="short_title">Short Title:</label>
+      <input type="text" id="short_title" name="game[short_title]" value="<%= game.short_title %>">
+    </div>
 
-  <div>
-    <label for="url">URL:</label>
-    <input type="text" id="url" name="game[url]" value="<%= game.url %>">
-  </div>
+    <div>
+      <label for="url">URL:</label>
+      <input type="text" id="url" name="game[url]" value="<%= game.url %>">
+    </div>
 
-  <input type="submit" value="Submit Game">
-</form>
-
-<form action="/DestroyGame" method="post">
-  <input type="hidden" name="game_id" value="<%= game.id%>">
-  <input type="submit" value="Delete">
-</form>
+    <input type="submit" class="button radius tiny" value="Submit Game">
+  </form>
+</div>
